# Cyberonics-Library

./: pyproject.toml  setup.py
src/cyberonics-py/: Device.py  __init__.py
src/cyberonics-py/graphics/: DeviceCell.py  Graphic.py  __init__.py
src/cyberonics-py/graphics/cells/: Button.py  HeaderText.py  Slider.py  Switch.py
src/cyberonics_py/: Device.py  DeviceProperty.py  Robot.py  Target.py  __init__.py
src/cyberonics_py/graphics/: Graphic.py  GraphicCell.py  GraphicState.py  GraphicTyping.py  __init__.py
src/cyberonics_py/graphics/cells/: BodyText.py  Button.py  HStack.py  HeaderText.py  Slider.py  StatusDot.py  SubText.py  Switch.py
test/: test.py
