[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberonics-py"
version = "0.1.0"
description = "Python library to interface with Cyberonics devices"
readme = "README.md"
authors = [{ name = "Skyler Wiernik", email = "skwiernik@wpi.edu" }]
dependencies = []  # Add your dependencies here

[tool.setuptools.packages.find]
where = ["src"]
